--- a/my-app/public/styles.css
+++ b/my-app/public/styles.css
@@ -25,6 +25,7 @@ body {
 
 header{
     padding: 10px;
+    border-bottom: 1px solid #efefef;
 }
 
 #logo {
@@ -54,6 +55,7 @@ header{
 
 header {
     position: relative;
+    padding: 0;
 }
 
 .head {
@@ -113,3 +115,40 @@ button {
     text-decoration: underline;
     text-decoration-color: #de0011;
 }
+
+
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    width: 100%;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1; 
+    background: rgba(255,255,255,0.95);
+    padding: 16px;
+    line-height: 19.32px;
+    font-size: 14px;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown a:hover {background-color: #ddd;}
+  
+  .show {display: block;}
+
+  .dropdownLink {
+      position: relative;
+      display: inline-block;
+  }
+
+  .wrapper {
+      text-align: center;
+      /* opacity: 1; */
+      width: 50%;
+      margin: auto;
+  }
